[project]
name = "ruuvitag-ble"
version = "0.1.1"
description = "Manage Ruuvitag BLE devices"
authors = [
    { name = "Aarni Koskela", email = "akx@iki.fi" },
]
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bluetooth-devices/ruuvitag-ble"
documentation = "https://ruuvitag-ble.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "ruuvitag_ble", from = "src" },
]
dependencies = [
    "bluetooth-data-tools~=0.1",
    "bluetooth-sensor-state-data~=1.6",
    "home-assistant-bluetooth~=1.6",
    "sensor-state-data~=2.9",
]

[project.urls]
"Bug Tracker" = "https://github.com/bluetooth-devices/ruuvitag-ble/issues"
"Changelog" = "https://github.com/bluetooth-devices/ruuvitag-ble/blob/main/CHANGELOG.md"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/ruuvitag_ble/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=ruuvitag_ble --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["ruuvitag_ble", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
