[project]
name = "ruuvitag-ble"
description = "Manage Ruuvitag BLE devices"
authors = [
    { name = "Aarni Koskela", email = "akx@iki.fi" },
]
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bluetooth-devices/ruuvitag-ble"
documentation = "https://ruuvitag-ble.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "ruuvitag_ble", from = "src" },
]
dependencies = [
    "bluetooth-data-tools>=1.0",
    "bluetooth-sensor-state-data>=1.6",
    "home-assistant-bluetooth>=1.6",
    "sensor-state-data>=2.20",
]
dynamic = [
 "version",
]

[project.urls]
"Bug Tracker" = "https://github.com/bluetooth-devices/ruuvitag-ble/issues"

[tool.hatch.version]
path = "src/ruuvitag_ble/__init__.py"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=ruuvitag_ble --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.ruff.lint]
extend-select = [
    "COM",
    "I",
]

[tool.ruff.lint.isort]
known-first-party = ["ruuvitag_ble", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
